Test: 주문서 항목 테스트 수정
Resolves: #443